# redefining_fe

./: .flake8  .gitignore  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: docs.yml  lint.yml  test.yml
docs/: Makefile
docs/source/: cell_complex.rst  cells.rst  conf.py  dof.rst  examples.rst  examples3d.rst  groups.rst  index.rst  serialisation.rst  spaces.rst  triples.rst
docs/test/: plots.py
fuse/: cells.py  dof.py  groups.py  traces.py  triples.py
redefining_fe/: 3d_examples.py  __init__.py  cells.py  dof.py  groups.py  main.py  serialisation.py  traces.py  triples.py  utils.py
redefining_fe/cell_complex/: cells.py
redefining_fe/dof_lang/: dof.py
redefining_fe/groups/: groups.py
redefining_fe/spaces/: element_sobolev_spaces.py  interpolation_spaces.py  polynomial_spaces.py
source/: conf.py  index.rst
src/: 3d_examples.py  compute_basis_func.py  main.py  scratch.py  triples.py
src/cell_complex/: cell_complex.py  cells.py  old_cells.py  old_cells2.py  scratch.py
src/dof_lang/: calculusop.py  dof.py  functionals.py
src/groups/: elements.py  group.py  groups.py  new_groups.py
src/spaces/: continuous_spaces.py  element_sobolev_spaces.py  polynomial_spaces.py
test/: eigen.py  element_examples.py  plots.py  tempscript.py  test_2d_examples_docs.py  test_3d_examples_docs.py  test_cells.py  test_convert_to_fiat.py  test_dofs.py  test_groups.py  test_perms.py  test_polynomial_space.py  test_serialisation.py  test_sobolev_space.py
